# floto_CFA_web

./: NOTES.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/src/: app.py  crawler.py  generate_pdf.py  graph.py  prompts.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/audit/: route.ts
frontend/app/api/send-report/: route.ts
