[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.8.6",
    "fastapi>=0.136.0",
    "fpdf>=1.7.2",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.15",
    "langgraph>=1.1.8",
    "resend>=2.29.0",
    "uvicorn>=0.44.0",
    "weasyprint>=68.1",
]
